[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.2",
    "langchain-ollama>=1.0.0",
    "ollama>=0.6.1",
    "pypdf>=6.4.1",
    "streamlit>=1.52.1",
]
